--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "antd": "^5.13.1",
+    "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
+    "cors": "^2.8.5",
+    "nodemon": "^3.0.3",
+    "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
