--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "antd": "^5.13.1",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
+    "concurrently": "^8.2.2",
     "cors": "^2.8.5",
     "nodemon": "^3.0.3",
     "papaparse": "^5.4.1",
@@ -27,7 +28,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "concurrently \"cd server && nodemon app.js\" \"npm run start\""
   },
   "eslintConfig": {
     "extends": [
