--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "^5.0.1",
     "sass": "^1.69.7",
     "typescript": "^4.9.5",
+    "vercel": "^33.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -48,5 +49,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "type": "module"
 }
