--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "bootstrap": "^5.3.2",
     "concurrently": "^8.2.2",
     "cors": "^2.8.5",
+    "mongoose": "^8.1.1",
     "nodemon": "^3.0.3",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.50.1",
     "react-scripts": "^5.0.1",
     "sass": "^1.69.7",
     "typescript": "^4.9.5",
