--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.24.0",
     "@babel/plugin-syntax-flow": "^7.14.5",
     "@babel/plugin-transform-react-jsx": "^7.14.9",
     "@popperjs/core": "^2.11.8",
+    "@testing-library/dom": "^9.3.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -29,7 +31,7 @@
     "react-scripts": "^5.0.1",
     "sass": "^1.69.7",
     "typescript": "^4.9.5",
-    "vercel": "^33.5.3",
+    "vercel": "^33.6.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -60,6 +62,8 @@
   "type": "module",
   "devDependencies": {
     "@types/hammerjs": "^2.0.45",
-    "@types/papaparse": "^5.3.14"
+    "@types/papaparse": "^5.3.14",
+    "mongodb-memory-server": "^9.1.7",
+    "mongodb-memory-server-global-4.4": "^9.1.7"
   }
 }
