--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "concurrently": "^8.2.2",
     "cors": "^2.8.5",
     "hammerjs": "^2.0.8",
+    "jest": "^29.7.0",
     "mongoose": "^8.1.1",
     "nodemon": "^3.0.3",
     "papaparse": "^5.4.1",
@@ -30,6 +31,8 @@
     "react-router-dom": "^6.22.1",
     "react-scripts": "^5.0.1",
     "sass": "^1.69.7",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
     "typescript": "^4.9.5",
     "vercel": "^33.6.1",
     "web-vitals": "^2.1.4"
